--- a/_styles.scss
+++ b/_styles.scss
@@ -35,6 +35,7 @@ body {
           width: 100%;
 
           tr.ac-heading {                         // Month selector component
+            border: 0;
             left: 50%;
             margin-bottom: 2rem;
             position: absolute;
@@ -42,23 +43,23 @@ body {
             width: 100%;
 
             th.ac-heading {
+              border: 0;
               width: 100%;
             }
           }
 
           tr.ac-weekdays {                        // Day of week labels
-            background-color: lightseagreen;
-            //height: 100%;
+            background-color: #4d4d4d;
+            border: 0;
             left: 50%;
             margin-top: 2rem;
             position: absolute;
             transform: translateX(-50%);
             width: 100%;
 
-            td {
+            td { // Set size for all day of week labels
               position: absolute;
               width: calc((100% / 7) - 1);
-
             }
 
             td:nth-child(1) {                     // Sunday header
@@ -98,6 +99,7 @@ body {
           }
 
           tr {
+            //outline-offset: $day-in-row-margin-top + $day-in-month-padding + .2rem;
 
             .ac-pad {                           // Greyed out past month day in month blocks
               //background-color: cornflowerblue;
@@ -110,28 +112,48 @@ body {
               position: absolute;
               margin-top: $day-in-row-margin-top;
               width: calc((100% / 7) - 1);
+              transition: all .2s ease;
 
               .ac-day-split-day,
               .ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
               .ac-day-split-top.ac-day-split-top-ac-grey-out-history {
                 font-size: 1.5rem;
               }
+
+              &:hover {
+                background-color: lightgrey;
+              }
             }
 
             .status-ac-grey-out-history {       // Past dates
-              background-color: blue;
+              background-color: #979797;
+              transition: all .2s ease;
+
+              &:hover {
+                background-color: #636363;
+              }
             }
 
             .ac-day-today {                     // Today
-              background-color: orangered;
+              //background-color: orangered;
             }
 
             .status-default {                   // Available
-              background-color: green;
+              background-color: #54764e;
+              transition: all .2s ease;
+
+              &:hover {
+                background-color: #0d520a;
+              }
             }
 
             .status-1 {
-              background-color: red;              // Reserved
+              background-color: #b16365;              // Reserved
+              transition: all .2s ease;
+
+              &:hover {
+                background-color: #8c0f0d;
+              }
             }
 
             .ac-day:nth-child(1) {                            // Sunday day in month
@@ -170,29 +192,39 @@ body {
             }
           }
 
+          //tr:not(:nth-child(n + 2)) {
+          //  border-bottom: 2px solid black;
+          //}
+
           tr:nth-child(3) {                           // First calendar day row
+            //border-bottom: 1px solid black;
             margin-top: $day-in-row-margin-top;
+            //outline: 1px solid black;
           }
 
           tr:nth-child(4) {                           // Second calendar day row
+            //border-top: 1px solid black;
             margin-top: $day-in-row-margin-top + $day-in-month-padding;
+            //outline: 1px solid black;
           }
 
           tr:nth-child(5) {                           // Third calendar day row
-            //margin-top: $day-in-row-margin-top + 2 * ($gutter-vertical + $day-in-month-padding);
+            //border-bottom: 2px solid black;
             margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
 
           tr:nth-child(6) {                           // Fourth calendar day row
-            //margin-top: $day-in-row-margin-top + 3 * ($gutter-vertical + $day-in-month-padding);
+            //border-bottom: 2px solid black;
             margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
 
           tr:nth-child(7) {
+            //border-bottom: 2px solid black;
             margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
 
           tr:nth-child(8) {
+            //border-bottom: 2px solid black;
             margin-top: $day-in-row-margin-top + $day-in-month-padding;
           }
         }
