--- a/_variables.scss
+++ b/_variables.scss
@@ -1,8 +1,13 @@
+// Sizes
 $iframe-height: 850px;
 $gutter-horizontal: 1rem;
 $day-in-row-margin-top: 3rem;
 $gutter-vertical: 1.5rem;
 $day-in-month-padding: 2rem;
+
+// Mobile
+$day-in-month-padding-mobile: 1rem;
+$gutter-horizontal-mobile: .5rem;
 
 $sunday-position: 8%;
 $monday-position: 22%;
