--- a/_variables.scss
+++ b/_variables.scss
@@ -16,3 +16,17 @@ $wednesday-position: 50%;
 $thursday-position: 64%;
 $friday-position: 78%;
 $saturday-position: 92%;
+
+// Colors
+$color-off-white: #F0F4F4;
+
+$color-light-grey: #979797;
+$color-dark-grey: #636363;
+
+$color-light-green: #54764e;
+$color-dark-green: #0d520a;
+
+$color-light-red: #b16365;
+$color-dark-red: #8c0f0d;
+
+$color-black: #000000;
